Refactored routing, fixed styles for top bar on mobile

--- a/src/components/statistics/components/current-income/current-income.module.scss
+++ b/src/components/statistics/components/current-income/current-income.module.scss
@@ -45,6 +45,7 @@ $color-icon: $gray-2;
   .profit-section {
     display: flex;
     flex-wrap: wrap;
+    height: 58px;
   }
 
   .info-icon {
