--- a/src/components/top-bar/top-bar.module.scss
+++ b/src/components/top-bar/top-bar.module.scss
@@ -8,6 +8,11 @@
   background-image: linear-gradient(to bottom, white, 95%, rgba(255, 255, 255, 0.5));
 }
 
+.top-bar-content {
+  display: flex;
+  align-items: center;
+}
+
 @media screen and (min-width: 481px) {
   .top-bar {
     top: 0;
@@ -16,7 +21,13 @@
 
 @media screen and (max-width: 480px) {
   .top-bar {
-    top: 128px;
     background-image: linear-gradient(to bottom, #fafaff, 95%, rgba(255, 255, 255, 0.5));
+
+    :global(#root:has(#current-income:checked)) & {
+      top: 130px;
+    }
+    :global(#root:has(#monthly-income:checked)) & {
+      top: 196px;
+    }
   }
 }
