--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -23,7 +23,6 @@ p {
 }
 
 main {
-  /* flex-grow: 1; */
   display: flex;
   flex-direction: column;
   padding: 0 16px 16px;
@@ -55,5 +54,6 @@ button {
   main {
     flex-grow: 1;
     max-width: 598px;
+    min-height: 100vh;
   }
 }
